# obmep

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  scrapy.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation_improvement.yaml  feature_request.yaml
.github/workflows/: build.yaml  issue-assign.yaml  pr-checker.yaml  release.yaml  test.yaml
obmep/: cli.py  extensions.py  items.py  middlewares.py  models.py  pipelines.py  settings.py
obmep/resources/: editions.csv  school_types.csv  states.csv
obmep/spiders/: __init__.py
obmep/spiders/base/: __init__.py  city.py  school.py  student.py  teacher.py
obmep/spiders/city/: ed_16obmep_city.py  ed_17obmep_city.py  ed_18obmep_city.py  ed_obmep2005_city.py  ed_obmep2006_city.py  ed_obmep2007_city.py  ed_obmep2008_city.py  ed_obmep2009_city.py  ed_obmep2010_city.py  ed_obmep2011_city.py  ed_obmep2012_city.py  ed_obmep2013_city.py  ed_obmep2014_city.py  ed_obmep2015_city.py  ed_obmep2016_city.py  ed_obmep2017_city.py  ed_obmep2018_city.py  ed_obmep2019_city.py
obmep/spiders/ed_17obmep/: ed_17obmep_city.py  ed_17obmep_school.py  ed_17obmep_student.py  ed_17obmep_teacher.py
obmep/spiders/ed_2005/: ed_2005_city.py  ed_2005_school.py  ed_2005_student.py  ed_2005_teacher.py
obmep/spiders/ed_2006/: ed_2006_city.py  ed_2006_school.py  ed_2006_student.py  ed_2006_teacher.py
obmep/spiders/ed_2007/: ed_2007_city.py  ed_2007_school.py  ed_2007_student.py  ed_2007_teacher.py
obmep/spiders/ed_2008/: ed_2008_city.py  ed_2008_school.py  ed_2008_student.py  ed_2008_teacher.py
(+80 files in other folders)
