[tool.poetry]
name = "obmep"
version = "0.1.0"
description = ""
authors = ["brenner-santos (bs.brenner.santos@gmail.com)"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
sqlalchemy = "^2.0.25"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
