[tool.poetry]
name = "obmep"
version = "0.2.0"
description = ""
authors = ["Brenner Santos <bs.brenner.santos@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
sqlalchemy = "^2.0.25"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
taskipy = "^1.12.2"
commitizen = "^3.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
check = "blue --check --diff . && isort --check --diff ."
format = "blue . && isort ."

[tool.commitizen]
version = "0.2.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true